test/edition/basics/attributeCheck-badFirstEditionName.good
attributeCheck-badFirstEditionName.chpl:3: error: unknown first edition 'thisHadBetterNeverBeAnActualEditionNameYall'
